[package]
name = "raybnn_python"
version = "0.1.0"
authors = [""]
edition = "2021"

[lib]
name = "raybnn_python"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.19", features = ["extension-module", "multiple-pymethods"] }
numpy = "0.19"
ndarray = { version = "0.15", features = ["rayon", "blas"] }
blas-src = { version = "0.8", features = ["openblas"] }
openblas-src = { version = "0.10", features = ["cblas", "system"] }

[workspace]
